# formoniq

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  euler_run.sh  euler_watch.sh  flake.nix  plan.md
.cargo/: config.toml
_tests/: fdm.rs
crates/chartan/: Cargo.toml
crates/chartan/src/: field.rs  lib.rs  parametrization.rs
crates/common/: Cargo.toml
crates/common/src/: affine.rs  combo.rs  coord.rs  gramian.rs  io.rs  lib.rs  linalg.rs  metric.rs  sparse.rs  util.rs
crates/common/src/combo/: cartesian.rs
crates/common/src/linalg/: eigen.rs  faer.rs  nalgebra.rs  petsc.rs
crates/coorder/: Cargo.toml  README.md
crates/coorder/src/: affine.rs  lib.rs
crates/ddf/: Cargo.toml
crates/ddf/src/: cochain.rs  derham.rs  field.rs  io.rs  lib.rs  reconstruct.rs  section.rs  whitney.rs
crates/ddf/src/whitney/: form.rs  gsf.rs  interpolant.rs  lsf.rs
crates/derham/: Cargo.toml  README.md
crates/derham/src/: cochain.rs  interpolate.rs  io.rs  lib.rs  project.rs  prolongate.rs  reduction.rs  section.rs  whitney.rs
crates/derham/src/interpolate/: form.rs  interpolant.rs
crates/derham/src/whitney/: form.rs  interpolant.rs
crates/exterior/: Cargo.toml  README.md
crates/exterior/src/: dense.rs  field.rs  lib.rs  list.rs  manifold.rs  term.rs  variance.rs
crates/formoniq/: Cargo.toml  README.md
crates/formoniq/examples/: curvature_flow.rs  dirac.rs  evp.rs  heat.rs  helmholtz.rs  hodge_laplace_evp.rs  hodge_laplace_source.rs  hodge_laplace_sphere.rs  laplacian_evp.rs  laplacian_source.rs  maxwell.rs  maxwell_cavity_template.html  maxwell_cavity_viz.rs  maxwell_mixed.rs  minkowski_dirac.rs  minkowski_maxwell.rs  multigrid.rs  poisson.rs  source.rs  sphere_wave.rs  spherical_harmonics.rs  visual.rs  wave.rs  whitney.rs
crates/formoniq/examples/util/: mod.rs
crates/formoniq/src/: assemble.rs  bc.rs  fe.rs  io.rs  lib.rs  linalg.rs  multigrid.rs  operators.rs  problems.rs  time.rs  whitney.rs  whitney_complex.rs
crates/formoniq/src/fe/: whitney.rs
crates/formoniq/src/linalg/: eigen.rs  faer.rs
crates/formoniq/src/problems/: diffusion.rs  dirac.rs  elliptic.rs  heat.rs  helmholtz.rs  hodge_laplace.rs  laplace_beltrami.rs  maxwell.rs  poisson.rs  wave.rs
crates/formoniq/tests/: boundary_conditions.rs  fdm.rs  fem3d.rs  hodge_theory.rs  ref_elmat.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: coord.rs  lib.rs  metric.rs  regge.rs
crates/geometry/src/coord/: manifold.rs
crates/geometry/src/coord/manifold/: cartesian.rs  dim3.rs  gmsh.rs  vtk.rs
crates/geometry/src/metric/: manifold.rs
crates/geometry/src/metric/manifold/: local.rs
crates/glatt/: Cargo.toml  README.md
crates/glatt/src/: field.rs  lib.rs  parametrization.rs
crates/gramian/: Cargo.toml  README.md
crates/gramian/src/: lib.rs
crates/iterative/: Cargo.toml  README.md
crates/iterative/src/: krylov.rs  lib.rs  multigrid.rs  operator.rs  precond.rs  stationary.rs
crates/manifold/: Cargo.toml
crates/manifold-complex/: Cargo.toml
crates/manifold-complex/src/: lib.rs  simplicial.rs
crates/manifold/src/: atlas.rs  complex.rs  coords.rs  dim3.rs  gen.rs  geometry.rs  io.rs  lib.rs  point.rs  simplicial.rs  topology.rs
crates/manifold/src/atlas/: point.rs
crates/manifold/src/geometry/: coord.rs  metric.rs
crates/manifold/src/geometry/coord/: local.rs  locate.rs  mesh.rs  quadrature.rs  simplex.rs
crates/manifold/src/geometry/metric/: geometry.rs  mesh.rs  simplex.rs
crates/manifold/src/io/: blender.rs  gmsh.rs  vtk.rs
crates/manifold/src/topology/: boundary.rs  complex.rs  data.rs  handle.rs  homology.rs  simplex.rs  skeleton.rs
crates/manifold/src/topology/complex/: attribute.rs  dim.rs  handle.rs
crates/multiindex/: Cargo.toml  README.md
crates/multiindex/src/: cartesian.rs  composition.rs  lib.rs  permutation.rs
crates/realize/: CLAUDE.md  Cargo.toml
crates/realize/src/: advect.rs  bake.rs  demos.rs  deposit.rs  glyph.rs  lib.rs  reduce.rs  surface.rs  volume.rs
crates/realize/src/io/: obj.rs  surface.rs  vtu.rs
crates/simplicial/: Cargo.toml  README.md
crates/simplicial/src/: atlas.rs  gen.rs  geometry.rs  io.rs  lib.rs  linalg.rs  mesher.rs  topology.rs
crates/simplicial/src/atlas/: chart.rs  point.rs  quadrature.rs  refine.rs  simplex_coords.rs  transition.rs
crates/simplicial/src/geometry/: coord.rs  metric.rs  refine.rs
crates/simplicial/src/geometry/coord/: locate.rs  mesh.rs  simplex.rs
crates/simplicial/src/geometry/metric/: connection.rs  geometry.rs  mesh.rs  simplex.rs
crates/simplicial/src/io/: cbor.rs  gmsh.rs
crates/simplicial/src/mesher/: cartesian.rs  quotient.rs  quotient_embed.rs  sphere.rs
crates/simplicial/src/topology/: boundary.rs  complex.rs  data.rs  handle.rs  homology.rs  ordering.rs  orientation.rs  refine.rs  role.rs  simplex.rs  skeleton.rs
crates/studio/: CLAUDE.md  Cargo.toml  PLAN-platform.md  PLAN.md  build.rs
crates/studio/assets/meshes/: SOURCES.md  torus0.msh
crates/studio/examples/: _check_spectrum.rs
crates/studio/src/: advect.rs  app.rs  bake.rs  cli.rs  demos.rs  deposit.rs  display.rs  export.rs  gallery.rs  glyph.rs  io.rs  lib.rs  main.rs  mesh3d.rs  scene.rs  solve.rs  streamline.rs  surface.rs  ui.rs  volume.rs  web.rs  welcome.rs
crates/studio/src/io/: blender.rs  obj.rs  surface.rs  vtu.rs
crates/studio/src/render/: advect.rs  advect.wgsl  bloom.rs  bloom.wgsl  camera.rs  context.rs  deposit.rs  deposit.wgsl  downsample.rs  downsample.wgsl  fill.rs  fill.wgsl  gbuffer.wgsl  glyph.rs  glyph.wgsl  item.rs  lic.wgsl  mesh.rs  mod.rs  particles.rs  particles.wgsl  points.rs  points.wgsl  preamble.wgsl  renderer.rs  segments.rs  segments.wgsl  shader.wgsl  streamline.rs  streamline.wgsl  uniform.rs  volume.rs  volume.wgsl  wireframe.rs  wireframe.wgsl
crates/studio/src/ui/: mod.rs  panel.rs
crates/studio/tests/: whitney_basis_scene.rs
crates/studio/web/: index.html  solve_worker.js
examples/: advection.rs  advection_stationary.rs  advection_transient.rs  bary.rs  common.rs  curvature_flow.rs  explicit.rs  fd.rs  gmsh.rs  (+15 more)
(+130 files in other folders)
