[package]
name = "formoniq"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.33.2"
nalgebra-sparse = "0.10.0"
faer = "0.19.4"

mshio = "0.4.2"

indexmap = "2.6.0"
once_cell = "1.20.2"
thiserror = "2.0.3"
tracing = "0.1.40"
num-integer = "0.1.46"
itertools = "0.13.0"
num-traits = "0.2.19"
faer-ext = "0.3.0"
lanczos = "0.2.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"

[profile.dev.package.faer]
opt-level = 3
