[workspace]
resolver = "2"

members = [
  "crates/formoniq",
  "crates/derham",
  "crates/exterior",
  "crates/glatt",
  "crates/simplicial",
  "crates/multiindex",
  "crates/gramian",
  "crates/coorder",
  "crates/iterative",
  "crates/realize",
  "crates/studio",
]

# `studio` pulls in the wgpu/winit/egui graphics stack -- deps the numerics core
# never touches, compiled optimized here (see the profile below). Excluding it
# from the default set keeps the inner loop (`cargo test`, `cargo clippy`, bare
# of `--workspace`) on the core crates alone; `--workspace` still reaches studio,
# and so does CI.
default-members = [
  "crates/formoniq",
  "crates/derham",
  "crates/exterior",
  "crates/glatt",
  "crates/simplicial",
  "crates/multiindex",
  "crates/gramian",
  "crates/coorder",
  "crates/iterative",
  "crates/realize",
]

# Dependencies are compiled optimized even in a debug build. The workspace's own
# crates are not: they stay at `opt-level = 0`, where a backtrace and a debugger
# still mean something.
#
# The asymmetry is the point. nalgebra and faer are inner-loop numerics -- a
# sparse LU, a dense QZ, a mass assembly's element products -- and nothing here
# is ever debugged by stepping into them, so compiling them unoptimized buys no
# insight and costs minutes on every `cargo test`. This changes what the tests
# cost, never what they check.
[profile.dev.package."*"]
opt-level = 3
