[package]
name = "chartan"
version = "0.1.0"
edition = "2021"

[dependencies]
coorder = { path = "../coorder" }
exterior = { path = "../exterior" }
formoniq-linalg = { path = "../linalg" }
gramian = { path = "../gramian" }
multiindex = { path = "../multiindex" }

nalgebra = "0.35.0"

approx = "0.5.1"
