[package]
name = "common"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = { version = "0.35.0", features = ["serde-serialize"] }
nalgebra-sparse = "0.12.0"
faer = "0.24.4"

itertools = "0.15.0"
num-integer = "0.1.46"

num-traits = "0.2.19"
approx = "0.5.1"

serde = { version = "1.0.228", features = ["derive"] }
ciborium = "0.2.2"
