[package]
name = "ddf"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
exterior = { path = "../exterior" }
continuum = { path = "../continuum" }
manifold = { path = "../manifold" }
common = { path = "../common" }

nalgebra = "0.35.0"
nalgebra-sparse = "0.12.0"

approx = "0.5.1"
