[package]
name = "formoniq"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Finite Element Exterior Calculus (FEEC): PDEs formulated with differential forms and solved on simplicial pseudo-Riemannian manifolds of arbitrary dimension, intrinsically and coordinate-free."
repository = "https://github.com/luiswirth/formoniq"
readme = "README.md"
keywords = ["feec", "finite-element", "differential-forms", "pde"]
categories = ["mathematics", "science"]

[dependencies]
derham = { path = "../derham", version = "0.2.0" }
exterior = { path = "../exterior", version = "0.2.0" }
glatt = { path = "../glatt", version = "0.2.0" }
simplicial = { path = "../simplicial", version = "0.2.0" }
coorder = { path = "../coorder", version = "0.2.0" }
gramian = { path = "../gramian", version = "0.2.0" }
multiindex = { path = "../multiindex", version = "0.2.0" }

nalgebra = "0.35.0"
nalgebra-sparse = "0.12.0"
# faer's `rayon` feature pulls its `spindle` thread pool, which needs
# atomic-wait/futex and does not build for single-threaded `wasm32-unknown-unknown`.
# Enable it only off the web, where it drives the parallel dense/sparse solves.
# The remaining features are faer's `default` set minus `rayon`, so the native
# build below is unchanged. `formoniq` is a core crate, but this is a
# target-conditional carry-over of studio's web build and leaves native untouched.
faer = { version = "0.24.4", default-features = false, features = [
  "std",
  "sparse-linalg",
  "rand",
  "npy",
] }

tracing = "0.1.44"
itertools = "0.15.0"
rayon = "1.12.0"
approx = "0.5.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
faer = { version = "0.24.4", features = ["rayon"] }

[dev-dependencies]
tracing-subscriber = "0.3.23"
num-traits = "0.2.19"
