[package]
name = "geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
topology = { path = "../topology" }
index-algebra = { path = "../index-algebra" }
common = { path = "../common" }

nalgebra = "0.33.2"
nalgebra-sparse = "0.10.0"

mshio = "0.4.2"

itertools = "0.13.0"
tracing = "0.1.40"
vtkio = "0.6.3"
