[package]
name = "glatt"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "The smooth continuum manifold a simplicial mesh approximates: parametrizations and analytic differential-form data on it."
repository = "https://github.com/luiswirth/formoniq"
readme = "README.md"
keywords = ["geometry", "manifold", "parametrization"]
categories = ["mathematics", "science"]

[dependencies]
coorder = { path = "../coorder", version = "0.2.0" }
exterior = { path = "../exterior", version = "0.2.0" }
gramian = { path = "../gramian", version = "0.2.0" }

nalgebra = "0.35.0"

approx = "0.5.1"
