[package]
name = "gramian"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Gram matrix and Riemannian metric: an inner product expressed in a basis."
repository = "https://github.com/luiswirth/formoniq"
keywords = ["gram-matrix", "riemannian-metric", "linear-algebra"]
categories = ["mathematics"]

[dependencies]
nalgebra = { version = "0.35.0", features = ["serde-serialize"] }

serde = { version = "1.0.228", features = ["derive"] }
