[package]
name = "gramian"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "A Gram matrix and Riemannian metric: an inner product expressed in a basis."
repository = "https://github.com/luiswirth/formoniq"
readme = "README.md"
keywords = ["gram-matrix", "riemannian-metric", "linear-algebra"]
categories = ["mathematics"]

[dependencies]
nalgebra = "0.35.0"

serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]
