[package]
name = "iterative"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Iterative solving of sparse linear systems around one object: an approximate inverse, reused as solver, preconditioner or smoother."
repository = "https://github.com/luiswirth/formoniq"
readme = "README.md"
keywords = ["iterative-solver", "krylov", "multigrid", "preconditioner"]
categories = ["mathematics"]

[dependencies]
nalgebra = "0.35.0"
nalgebra-sparse = "0.12.0"
