[package]
name = "manifold-complex"
version = "0.1.0"
edition = "2021"

[dependencies]
geometry = { path = "../geometry" }
index-algebra = { path = "../index-algebra" }
common = { path = "../common" }

nalgebra = "0.33.2"
nalgebra-sparse = "0.10.0"

mshio = "0.4.2"

itertools = "0.13.0"
indexmap = "2.7.0"

tracing = "0.1.40"
