[package]
name = "manifold"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }

nalgebra = "0.35.0"
nalgebra-sparse = "0.12.0"

num-bigint = "0.4.6"
num-rational = "0.4.2"
num-integer = "0.1.46"
num-traits = "0.2.19"

indexmap = "2.14.0"
itertools = "0.15.0"
tracing = "0.1.44"

mshio = "0.4.2"
approx = "0.5.1"
rayon = "1.12.0"
