[package]
name = "multiindex"
version = "0.2.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Combinatorics of finite index sets: colex-ranked subsets and cartesian multi-indices."
repository = "https://github.com/luiswirth/formoniq"
readme = "README.md"
keywords = ["combinatorics", "simplicial", "multi-index"]
categories = ["mathematics"]

[dependencies]
num-integer = "0.1.46"

[dev-dependencies]
itertools = "0.15.0"
