[package]
name = "simplicial"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
coorder = { path = "../coorder" }
formoniq-linalg = { path = "../linalg" }
gramian = { path = "../gramian" }
multiindex = { path = "../multiindex" }

nalgebra = { version = "0.35.0", features = ["serde-serialize"] }
nalgebra-sparse = "0.12.0"

ciborium = "0.2.2"

num-bigint = "0.4.6"
num-rational = "0.4.2"
num-integer = "0.1.46"
num-traits = "0.2.19"

indexmap = { version = "2.14.0", features = ["serde"] }
itertools = "0.15.0"
tracing = "0.1.44"

mshio = "0.4.2"
approx = "0.5.1"
rayon = "1.12.0"

serde = { version = "1.0.228", features = ["derive"] }
