[package]
name = "simplicial"
version = "0.2.0"
edition = "2021"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "A simplicial manifold of arbitrary dimension, with geometry as a pluggable input: topology, atlas, and Regge or embedded metrics."
repository = "https://github.com/luiswirth/formoniq"
readme = "README.md"
keywords = ["simplicial", "mesh", "fem", "geometry"]
categories = ["mathematics", "science"]

[dependencies]
coorder = { path = "../coorder", version = "0.2.0" }
gramian = { path = "../gramian", version = "0.2.0" }
multiindex = { path = "../multiindex", version = "0.2.0" }

nalgebra = "0.35.0"
nalgebra-sparse = "0.12.0"

ciborium = { version = "0.2.2", optional = true }

num-bigint = "0.4.6"
num-rational = "0.4.2"
num-integer = "0.1.46"
num-traits = "0.2.19"

indexmap = "2.14.0"
itertools = "0.15.0"
tracing = "0.1.44"

mshio = "0.4.2"
approx = "0.5.1"
rayon = "1.12.0"

serde = { version = "1.0.228", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "dep:ciborium", "nalgebra/serde-serialize", "gramian/serde"]
