[package]
name = "formoniq-studio"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal workspace dependencies
formoniq = { path = "../formoniq" }
ddf = { path = "../ddf" }
manifold = { path = "../manifold" }
common = { path = "../common" }
exterior = { path = "../exterior" }
# Pinned to match egui-wgpu 0.35's own wgpu dependency: the render pass and
# command-buffer types crossing the egui/native boundary must be the same
# `wgpu` crate, not just semver-compatible. Bump together with egui-wgpu.
wgpu = "29.0.4"
winit = "0.30.13"
pollster = "1.0.1"
nalgebra = "0.35.0"
log = "0.4.33"
env_logger = "0.11.11"
egui = "0.35.0"
egui-wgpu = "0.35.0"
egui-winit = "0.35.0"
cfg-if = "1.0.4"
bytemuck = { version = "1.25.1", features = ["derive"] }

[dev-dependencies]
# Pinned to the same version wgpu resolves internally (see the `wgpu` pin
# above): validates the WGSL source files against the exact frontend wgpu
# itself uses to build pipelines, so a shader that fails at pipeline-creation
# time fails `cargo test` first instead.
naga = { version = "29.0.4", features = ["wgsl-in"] }

# Native-only: an in-egui file browser for loading a custom mesh. Pure Rust
# (its only extra deps are `directories` and `sysinfo`), so it pulls in no GTK,
# no D-Bus portal and no platform toolkit -- unlike a native-dialog crate. The
# wasm target has no filesystem to browse, so the feature is native-only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.6.2", features = ["derive"] }
egui-file-dialog = "0.14.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
