[package]
name = "formoniq-studio"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Internal workspace dependencies
formoniq = { path = "../formoniq" }
derham = { path = "../derham" }
chartan = { path = "../chartan" }
simplicial = { path = "../simplicial" }
coorder = { path = "../coorder" }
formoniq-linalg = { path = "../linalg" }
gramian = { path = "../gramian" }
exterior = { path = "../exterior" }
# Pinned to match egui-wgpu 0.35's own wgpu dependency: the render pass and
# command-buffer types crossing the egui/native boundary must be the same
# `wgpu` crate, not just semver-compatible. Bump together with egui-wgpu.
wgpu = "29.0.4"
winit = "0.30.13"
pollster = "1.0.1"
nalgebra = "0.35.0"
log = "0.4.33"
env_logger = "0.11.11"
egui = "0.35.0"
egui-wgpu = "0.35.0"
egui-winit = "0.35.0"
bytemuck = { version = "1.25.1", features = ["derive"] }
# An in-egui file browser for loading a custom mesh. Pure Rust (its only extra
# deps are `directories` and `sysinfo`), so it pulls in no GTK, no D-Bus portal
# and no platform toolkit -- unlike a native-dialog crate.
egui-file-dialog = "0.14.1"
clap = { version = "4.6.2", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }

[dev-dependencies]
# Pinned to the same version wgpu resolves internally (see the `wgpu` pin
# above): validates the WGSL source files against the exact frontend wgpu
# itself uses to build pipelines, so a shader that fails at pipeline-creation
# time fails `cargo test` first instead.
naga = { version = "29.0.4", features = ["wgsl-in"] }
